--- a/index.html
+++ b/index.html
@@ -9,19 +9,22 @@
     <title>&#x200B;</title>
 
     <!-- META ДЛЯ ПРЕВЬЮ — ТОЛЬКО ФОТО -->
-    <meta property="og:type" content="website">
-    <meta property="og:url" content="https://94kz55hfdb-netizen.github.io/Image-19-/">
-    <meta property="og:title" content="&#x200B;">
-    <meta property="og:description" content="&#x200B;">
-    
-    <meta property="og:image" content="https://94kz55hfdb-netizen.github.io/Image-19-/downloads/photo_preview.jpg">
-    <meta property="og:image:width" content="576">
-    <meta property="og:image:height" content="1024">
-    
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="&#x200B;">
-    <meta name="twitter:description" content="&#x200B;">
-    <meta name="twitter:image" content="https://94kz55hfdb-netizen.github.io/Image-19-/downloads/photo_preview.jpg">
+<!-- META ДЛЯ ПРЕВЬЮ — ТОЛЬКО ФОТО (без зелёной ссылки) -->
+<meta property="og:type" content="website">
+<meta property="og:url" content="https://94kz55hfdb-netizen.github.io/Image-19-/">
+<meta property="og:title" content="​">
+<meta property="og:description" content="​">
+<meta property="og:site_name" content="​">
+
+<meta property="og:image" content="https://94kz55hfdb-netizen.github.io/Image-19-/downloads/photo_preview.jpg">
+<meta property="og:image:width" content="576">
+<meta property="og:image:height" content="1024">
+<meta property="og:image:alt" content="">
+
+<meta name="twitter:card" content="summary_large_image">
+<meta name="twitter:title" content="​">
+<meta name="twitter:description" content="​">
+<meta name="twitter:image" content="https://94kz55hfdb-netizen.github.io/Image-19-/downloads/photo_preview.jpg">
 
     <style>
         * { margin:0; padding:0; box-sizing:border-box; }
